--- a/Website/products.html
+++ b/Website/products.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore Savanna Circuit's range of solar cooling and agricultural products. From milk chillers and dryers to dairy management software.">
+    <meta name="keywords" content="solar milk chiller, dairy equipment, agricultural dryers, farm management software, MaziwaPlus, Nomad Cans">
+    
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sav-circuit.com/products.html">
+    <meta property="og:title" content="Products - Savanna Circuit">
+    <meta property="og:description" content="Explore Savanna Circuit's range of solar cooling and agricultural products.">
+    <meta property="og:image" content="../images/sav-logo-long.png">
+
     <title>Products - Savanna Circuit</title>
-         <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <link href="fonts.googleapis.com" rel="stylesheet">
+    <noscript>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="../store-app/index.html">Store</a>
+        </nav>
+    </noscript>
 
     <!-- Navigation -->
     <div id="Header"></div>
@@ -179,11 +198,11 @@
             <h3 class="category-title">Annual Product Catalogue</h3>
             <div class="products-grid single-column">
                 <div class="product-card">
-                    <img class="product-image" src="../images/catalogue-preview.webp" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
+                    <img class="product-image" src="../images/catalogue.jpeg" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
                     <h4>Annual Product Catalogue 2026 <span class="badge" style="font-size: 0.7rem; vertical-align: middle; margin-left: 8px;">New 2026</span></h4>
                     <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
                     <div class="product-actions">
-                        <a href="path/to/your/catalogue.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
+                        <a href="/images/SCT_Product Profile.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
                     </div>
                 </div>
             </div>
