--- a/store-app/products-detailed/iwd-ice-water-dispenser.html
+++ b/store-app/products-detailed/iwd-ice-water-dispenser.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+   
+    <!-- Navigation -->
      <div id="header-placeholder"></div>
 <!--breadcrumb-->
     <nav class="breadcrumb">
