--- a/Website/about.html
+++ b/Website/about.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learn about Savanna Circuit's mission to empower farmers through innovation. Meet our team and discover our values and approach.">
+    <meta name="keywords" content="Savanna Circuit team, mission, vision, agricultural innovation, Kenya tech company">
+    
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sav-circuit.com/about.html">
+    <meta property="og:title" content="About Us - Savanna Circuit">
+    <meta property="og:description" content="Learn about Savanna Circuit's mission to empower farmers through innovation.">
+    <meta property="og:image" content="../images/sav-logo-long.png">
+
     <title>Team - Savanna Circuit</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <link href="fonts.googleapis.com" rel="stylesheet">
+  <noscript>
+      <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+      </nav>
+  </noscript>
 
   <!-- Navigation -->
    <div id="Header"></div>
@@ -25,91 +43,15 @@
     <p>Empowering farmers through innovation, technology, and sustainable solutions</p>
     </div>
 </section>
-
-  <!-- About Navigation Tabs -->
+   <!-- About Navigation Tabs -->
   <section class="about-nav">
     <div class="about-nav-container">
       <a href="#our-story" class="about-tab-link active">Our Story</a>
       <a href="#mission-vision-values" class="about-tab-link">Mission, Vision & Values</a>
       <a href="#our-approach" class="about-tab-link">Our Approach</a>
       <a href="#team" class="about-tab-link">Team</a>
-      <a href="#partners" class="about-tab-link">Partners</a>
     </div>
   </section>
-
- </div>
-</section>
-
-  <!-- Workflow Section -->
-<section class="seamless-workflow">
-  <div class="workflow-header">
-    <h2 class="section-title">Our End-to-End Process</h2>
-    <p class="section-subtitle">A comprehensive approach to delivering excellence at every stage.</p>
-  </div>
-  
-  <div class="seamless-track">
-    <!-- Step 1: Product Design -->
-    <div class="seamless-card reveal">
-      <div class="img-box">
-        <img src="images.unsplash.com" alt="Product Design Phase" loading="lazy">
-      </div>
-      <div class="text-box">
-        <span class="num">01</span>
-        <h3>Product Design</h3>
-        <p>Expert engineering and UI/UX prototyping to turn your concept into a viable blueprint.</p>
-      </div>
-    </div>
-
-    <!-- Step 2: Manufacturing & QC -->
-    <div class="seamless-card reveal">
-      <div class="img-box">
-        <img src="images.unsplash.com" alt="Manufacturing and Quality Control" loading="lazy">
-      </div>
-      <div class="text-box">
-        <span class="num">02</span>
-        <h3>Manufacturing & QC</h3>
-        <p>Precision-led production with multi-stage quality checks to ensure zero-defect output.</p>
-      </div>
-    </div>
-
-    <!-- Step 3: Distribution -->
-    <div class="seamless-card reveal">
-      <div class="img-box">
-        <img src="images.unsplash.com" alt="Global Distribution" loading="lazy">
-      </div>
-      <div class="text-box">
-        <span class="num">03</span>
-        <h3>Distribution</h3>
-        <p>Optimized logistics and secure supply chain management for global product delivery.</p>
-      </div>
-    </div>
-
-    <!-- Step 4: Training & Adoption -->
-    <div class="seamless-card reveal">
-      <div class="img-box">
-        <img src="images.unsplash.com" alt="Training and User Adoption" loading="lazy">
-      </div>
-      <div class="text-box">
-        <span class="num">04</span>
-        <h3>Training & Adoption</h3>
-        <p>On-site training and digital onboarding to ensure your team masters the new technology.</p>
-      </div>
-    </div>
-
-    <!-- Step 5: Aftersales & Monitoring -->
-    <div class="seamless-card reveal">
-      <div class="img-box">
-        <img src="images.unsplash.com" alt="Aftersales Support and Monitoring" loading="lazy">
-      </div>
-      <div class="text-box">
-        <span class="num">05</span>
-        <h3>Aftersales & Monitoring</h3>
-        <p>Continuous performance tracking and 24/7 technical support for long-term reliability.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
 
   <!-- Our Story Section -->
   <section id="our-story" class="about-section">
@@ -162,18 +104,18 @@
       <h2>Our Approach</h2>
       <div class="approach-grid">
         <div class="approach-card">
-          <h3><span><svg fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="-em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M512 160L512 416L128 416L128 160L512 160zM128 96C92.7 96 64 124.7 64 160L64 416C64 451.3 92.7 480 128 480L272 480L256 528L184 528C170.7 528 160 538.7 160 552C160 565.3 170.7 576 184 576L456 576C469.3 576 480 565.3 480 552C480 538.7 469.3 528 456 528L384 528L368 480L512 480C547.3 480 576 451.3 576 416L576 160C576 124.7 547.3 96 512 96L128 96z"/></svg></span>
-            Technology</h3>
+          <span><svg fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="0 0 640 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M512 160L512 416L128 416L128 160L512 160zM128 96C92.7 96 64 124.7 64 160L64 416C64 451.3 92.7 480 128 480L272 480L256 528L184 528C170.7 528 160 538.7 160 552C160 565.3 170.7 576 184 576L456 576C469.3 576 480 565.3 480 552C480 538.7 469.3 528 456 528L384 528L368 480L512 480C547.3 480 576 451.3 576 416L576 160C576 124.7 547.3 96 512 96L128 96z"/></svg></span>
+            <h3>Technology</h3>
           <p>Cutting-edge solar, IoT, and cloud-based solutions designed for the African context and smallholder farmer needs.</p>
         </div>
         <div class="approach-card">
-          <h3><span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="-em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 192C256 156.7 284.7 128 320 128C355.3 128 384 156.7 384 192C384 227.3 355.3 256 320 256C284.7 256 256 227.3 256 192zM208 400C208 338.1 258.1 288 320 288C381.9 288 432 338.1 432 400L432 408C432 421.3 421.3 432 408 432L232 432C218.7 432 208 421.3 208 408L208 400zM424 208C424 177.1 449.1 152 480 152C510.9 152 536 177.1 536 208C536 238.9 510.9 264 480 264C449.1 264 424 238.9 424 208zM451.2 308.4C460.3 305.5 470 304 480 304C533 304 576 347 576 400L576 410.7C576 422.5 566.4 432 554.7 432L475.9 432C478.6 424.5 480 416.4 480 408L480 400C480 365.9 469.4 334.3 451.2 308.4zM188.8 308.4C170.6 334.4 160 365.9 160 400L160 408C160 416.4 161.4 424.5 164.1 432L85.3 432C73.6 432 64 422.4 64 410.7L64 400C64 347 107 304 160 304C170 304 179.7 305.5 188.8 308.4zM104 208C104 177.1 129.1 152 160 152C190.9 152 216 177.1 216 208C216 238.9 190.9 264 160 264C129.1 264 104 238.9 104 208zM32 504C32 490.7 42.7 480 56 480L584 480C597.3 480 608 490.7 608 504C608 517.3 597.3 528 584 528L56 528C42.7 528 32 517.3 32 504z"/></svg></span>
-            Service</h3>
+          <span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="0 0 640 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 192C256 156.7 284.7 128 320 128C355.3 128 384 156.7 384 192C384 227.3 355.3 256 320 256C284.7 256 256 227.3 256 192zM208 400C208 338.1 258.1 288 320 288C381.9 288 432 338.1 432 400L432 408C432 421.3 421.3 432 408 432L232 432C218.7 432 208 421.3 208 408L208 400zM424 208C424 177.1 449.1 152 480 152C510.9 152 536 177.1 536 208C536 238.9 510.9 264 480 264C449.1 264 424 238.9 424 208zM451.2 308.4C460.3 305.5 470 304 480 304C533 304 576 347 576 400L576 410.7C576 422.5 566.4 432 554.7 432L475.9 432C478.6 424.5 480 416.4 480 408L480 400C480 365.9 469.4 334.3 451.2 308.4zM188.8 308.4C170.6 334.4 160 365.9 160 400L160 408C160 416.4 161.4 424.5 164.1 432L85.3 432C73.6 432 64 422.4 64 410.7L64 400C64 347 107 304 160 304C170 304 179.7 305.5 188.8 308.4zM104 208C104 177.1 129.1 152 160 152C190.9 152 216 177.1 216 208C216 238.9 190.9 264 160 264C129.1 264 104 238.9 104 208zM32 504C32 490.7 42.7 480 56 480L584 480C597.3 480 608 490.7 608 504C608 517.3 597.3 528 584 528L56 528C42.7 528 32 517.3 32 504z"/></svg></span>
+            <h3>Service</h3>
           <p>Expert field support, training, and customer service that ensures farmers can maximize the value of our products.</p>
         </div>
         <div class="approach-card">
-          <h3><span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="-em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M96 96C113.7 96 128 110.3 128 128L128 464C128 472.8 135.2 480 144 480L544 480C561.7 480 576 494.3 576 512C576 529.7 561.7 544 544 544L144 544C99.8 544 64 508.2 64 464L64 128C64 110.3 78.3 96 96 96zM208 288C225.7 288 240 302.3 240 320L240 384C240 401.7 225.7 416 208 416C190.3 416 176 401.7 176 384L176 320C176 302.3 190.3 288 208 288zM352 224L352 384C352 401.7 337.7 416 320 416C302.3 416 288 401.7 288 384L288 224C288 206.3 302.3 192 320 192C337.7 192 352 206.3 352 224zM432 256C449.7 256 464 270.3 464 288L464 384C464 401.7 449.7 416 432 416C414.3 416 400 401.7 400 384L400 288C400 270.3 414.3 256 432 256zM576 160L576 384C576 401.7 561.7 416 544 416C526.3 416 512 401.7 512 384L512 160C512 142.3 526.3 128 544 128C561.7 128 576 142.3 576 160z"/></svg></span>
-            Data</h3>
+          <h3><span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="0 0 640 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M96 96C113.7 96 128 110.3 128 128L128 464C128 472.8 135.2 480 144 480L544 480C561.7 480 576 494.3 576 512C576 529.7 561.7 544 544 544L144 544C99.8 544 64 508.2 64 464L64 128C64 110.3 78.3 96 96 96zM208 288C225.7 288 240 302.3 240 320L240 384C240 401.7 225.7 416 208 416C190.3 416 176 401.7 176 384L176 320C176 302.3 190.3 288 208 288zM352 224L352 384C352 401.7 337.7 416 320 416C302.3 416 288 401.7 288 384L288 224C288 206.3 302.3 192 320 192C337.7 192 352 206.3 352 224zM432 256C449.7 256 464 270.3 464 288L464 384C464 401.7 449.7 416 432 416C414.3 416 400 401.7 400 384L400 288C400 270.3 414.3 256 432 256zM576 160L576 384C576 401.7 561.7 416 544 416C526.3 416 512 401.7 512 384L512 160C512 142.3 526.3 128 544 128C561.7 128 576 142.3 576 160z"/></svg></span>
+           <h3>Data</h3>
           <p>Data-driven insights that help farmers make better decisions and optimize their operations for maximum impact.</p>
         </div>
       </div>
@@ -191,10 +133,16 @@
                 <div class="team-member">
                     <h3>Leadership Team</h3>
                     <p>Our experienced leadership brings together expertise in agriculture, technology, impact investing, and business development.</p>
-                    <a href="team.html" class="cta-link">Meet the Team →</a>
+                    
+                    <!-- Management (collapsible) -->
+                 <section class="about-section" id="team">
+                   <div class="section-container">
+                     <div id="team-dynamic-container"></div>
                   </div>
               </div>
           </div>
+      </div>
+      </section>
   </section>
 
       <!--Footer-->
