--- a/Website/contact.html
+++ b/Website/contact.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact Savanna Circuit for technical support, sales inquiries, or partnership opportunities. We are here to help farmers succeed.">
+    <meta name="keywords" content="contact Savanna Circuit, customer support, technical support, sales, Nairobi, Kenya">
+    
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sav-circuit.com/contact.html">
+    <meta property="og:title" content="Contact Us - Savanna Circuit">
+    <meta property="og:description" content="Contact Savanna Circuit for technical support, sales inquiries, or partnership opportunities.">
+    <meta property="og:image" content="../images/sav-logo-long.png">
+
     <title>Contact Us - Savanna Circuit</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <link href="fonts.googleapis.com" rel="stylesheet">
+    <noscript>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </noscript>
 
     <!-- Navigation -->
     <div id="Header"></div>
@@ -93,7 +111,7 @@
                     Support: support@savanacircuit.com</p>
                 </div>
                   <div class="contact-method">
-                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="browh" class="bi bi-chat" viewBox="0 0 20 10"><path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/></svg>
+                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="brown" class="bi bi-chat" viewBox="0 0 20 10"><path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/></svg>
                          Live Chat</h3>
                     <p>Available 9:00 AM - 5:00 PM</p>
                     <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20some%20support%20for%20my%20equipment." target="_blank" rel="noopener" class="cta-button primary">Start Chat</a>
