--- a/store-app/products-detailed/maziwaplus-dms.html
+++ b/store-app/products-detailed/maziwaplus-dms.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     
-     <div id="header-placeholder"></div>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- Navigation -->
+      <div id="header-placeholder"></div>
+
 <!--breadcrumb-->
     <nav class="breadcrumb">
         <a href="../index.html">Store</a> / <a href="../index.html#Dairy-Management-systems">Dairy Management</a> / MaziwaPlus DMS
