--- a/store-app/products-detailed/nomad-cans-10l.html
+++ b/store-app/products-detailed/nomad-cans-10l.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Header -->
       <div id="header-placeholder"></div>
 
