--- a/store-app/products-detailed/nomad-cans-25l.html
+++ b/store-app/products-detailed/nomad-cans-25l.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Header -->
   <div id="header-placeholder"></div>
 
