--- a/store-app/products-detailed/nomad-cans-50l.html
+++ b/store-app/products-detailed/nomad-cans-50l.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Header -->
      <div id="header-placeholder"></div>
      
@@ -19,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/NOMAD 50 LTRS.png"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/NOMAD CANS.jpeg"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
