--- a/Website/about.html
+++ b/Website/about.html
@@ -34,7 +34,7 @@
 <section class="hero-modern">
     <!-- Background image now replaces the video -->
     <div class="hero-background">
-        <img src="../images/TEAM (2).JPG" alt="News and Stories background" class="bg-media" loading="lazy">
+        <img src="../images/TEAM.png" alt="News and Stories background" class="bg-media" loading="lazy">
     </div>
 
     <!-- Content is inside a protective "Glass" card -->
@@ -133,16 +133,10 @@
                 <div class="team-member">
                     <h3>Leadership Team</h3>
                     <p>Our experienced leadership brings together expertise in agriculture, technology, impact investing, and business development.</p>
-                    
-                    <!-- Management (collapsible) -->
-                 <section class="about-section" id="team">
-                   <div class="section-container">
-                     <div id="team-dynamic-container"></div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      </section>
+                </div>
+            </div>
+            <div id="team-dynamic-container"></div>
+         </div>
   </section>
 
       <!--Footer-->
