--- a/Website/careers.html
+++ b/Website/careers.html
@@ -34,7 +34,7 @@
 <section class="hero-modern">
     <!-- Background image now replaces the video -->
     <div class="hero-background">
-        <img src="../images/TEAM (2).JPG" alt="News and Stories background" class="bg-media" loading="lazy">
+        <img src="../images/TEAM.png" alt="News and Stories background" class="bg-media" loading="lazy">
     </div>
 
     <!-- Content is inside a protective "Glass" card -->
