--- a/Website/contact.html
+++ b/Website/contact.html
@@ -34,7 +34,7 @@
 <section class="hero-modern">
     <!-- Background image now replaces the video -->
     <div class="hero-background">
-        <img src="../images/hero 2.JPG" alt="News and Stories background" class="bg-media" loading="lazy">
+        <img src="../images/hero home.png" alt="News and Stories background" class="bg-media" loading="lazy">
     </div>
 
     <!-- The glass card remains the same -->
@@ -153,8 +153,7 @@
     <section class="support-forms-section">
         <div class="section-container">
             <div class="forms-grid">
-           <div id = support-section" class="suppport-form-container">
-           <h3>Submit Contact Ticket</h3>
+           <div idmit Contact Ticket>
             <form class="support-form">
            <div class="form-group">
                  <label for="category-select">Contact Category</label>
