--- a/Website/index.html
+++ b/Website/index.html
@@ -84,7 +84,7 @@
     <!-- Step 1 & 2: Design & Manufacturing -->
     <div class="seamless-card reveal">
       <div class="img-box">
-        <img src="../IMAGES/manufacturing.jpg" alt="Design and Manufacturing" loading="lazy">
+        <img src="../images/manufacturing.png" alt="Design and Manufacturing" loading="lazy">
       </div>
       <div class="text-box">
         <span class="num">01 & 02</span>
@@ -96,7 +96,7 @@
     <!-- Step 3 & 4: Distribution & Training -->
     <div class="seamless-card reveal">
       <div class="img-box">
-        <img src="../images/(DISTRIBUTION) Glycol in Dunga.jpg" alt="Global Distribution" loading="lazy">
+        <img src="../images/(DISTRIBUTION) Glycol in Dunga.png" alt="Global Distribution" loading="lazy">
       </div>
       <div class="text-box">
         <span class="num">03 & 04</span>
@@ -108,7 +108,7 @@
     <!-- Step 5: Aftersales & Monitoring -->
     <div class="seamless-card reveal">
       <div class="img-box">
-        <img src="../images/WhatsApp Image 2024-10-08 at 13.37.29 (1).jpeg" alt="Aftersales Support and Monitoring" loading="lazy">
+        <img src="../images/follow up and support.png" alt="Aftersales Support and Monitoring" loading="lazy">
       </div>
       <div class="text-box">
         <span class="num">05</span>
@@ -125,14 +125,14 @@
     <div class="thrive-ecosystem-grid">
         <!-- Left Column -->
         <div class="thrive-tile tile-nomad">
-            <img src="../images/NOMAD CANS.jpeg" alt="Nomad Cans">
+            <img src="../images/NOMAD CANS.png" alt="Nomad Cans">
             <div class="tile-overlay">
                 <h4>Nomad Cans</h4>
                 <p>Patented, insulated food-grade containers designed for the safe transport of milk, maintaining optimal temperature using a chilled thermocore insert.</p>
             </div>
         </div>
         <div class="thrive-tile tile-eco">
-            <img src="../images/Eco-Sav bag.jpg" alt="Eco-Sav Bag">
+            <img src="../images/Eco-Sav bag(1).png" alt="Eco-Sav Bag">
             <div class="tile-overlay">
                 <h4>Eco-Sav Bag</h4>
                 <p>Durable, insulated carry packs designed for transporting fish and produce in cooled conditions, preserving freshness from farm to market.</p>
@@ -141,7 +141,7 @@
 
         <!-- Center Column (IWD) -->
         <div class="thrive-tile tile-iwd">
-            <img src="../images/IWD.jpg" alt="Ice Water Dispenser">
+            <img src="../images/IWD.png" alt="Ice Water Dispenser">
             <div class="tile-overlay">
                 <h4>Ice Water Dispenser (IWD)</h4>
                 <p>The heart of our ecosystem. It generates and stores glycol-cooled water at -30°C, powering Nomad Cans and Eco-Sav Bags. This decentralized cooling hub supports MaziwaPlus DMS integration, creating a fully integrated, sustainable ecosystem for farmers.</p>
@@ -150,14 +150,14 @@
 
         <!-- Right Column -->
         <div class="thrive-tile tile-dms">
-            <img src="../images/M+ DMS.png" alt="MaziwaPlus DMS">
+            <img src="../images/M+DMS.png" alt="MaziwaPlus DMS">
             <div class="tile-overlay">
                 <h4>MaziwaPlus DMS</h4>
                 <p>A cloud-based, mobile-integrated platform for real-time monitoring, route management, and digital records across the dairy supply chain.</p>
             </div>
         </div>
         <div class="thrive-tile tile-ev">
-            <img src="../images/EV.jpg" alt="Electric Mobility">
+            <img src="../images/EV.png" alt="Electric Mobility">
             <div class="tile-overlay">
                 <h4>Electric Mobility</h4>
                 <p>Sustainable, low-cost transport for last-mile delivery of agricultural products, fully integrated with our solar ecosystem.</p>
