--- a/store-app/products-detailed/bmc-solar.html
+++ b/store-app/products-detailed/bmc-solar.html
@@ -20,7 +20,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/SOLAR BMC.jpg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/SOLAR BMC.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -36,7 +36,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/SOLAR BMC.jpg" alt="MaziwaPlus Bulk Milk Chiller Solar">
+                        <img src="../../images/SOLAR BMC.png" alt="MaziwaPlus Bulk Milk Chiller Solar">
                            </div>
                 
                       <div class="product-info-section">
@@ -120,19 +120,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/SOLAR BMC.jpg" alt="bmc-hybrid" loading="lazy" />
+                     <img class="product-image small" src="../../images/HYBRID BMC.png" alt="bmc-hybrid" loading="lazy" />
                     <h4>Bulk Milk Chiller (Hybrid)</h4>
                     <p>Solar with grid/generator backup</p>
                     <a href="bmc-hybrid.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/pre chillers PRO.jpg" alt="maziwaplus-prechiller-pro" loading="lazy" />
+                     <img class="product-image small" src="../../images/pre chillers PRO.png" alt="maziwaplus-prechiller-pro" loading="lazy" />
                     <h4>MaziwaPlus Pro</h4>
                     <p>Solar-powered active cooling trike</p>
                     <a href="maziwaplus-prechiller-pro.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Traceability and payments</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
