--- a/store-app/products-detailed/eco-sav-bags.html
+++ b/store-app/products-detailed/eco-sav-bags.html
@@ -21,7 +21,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/Eco-Sav bag.jpg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/Eco-Sav bag(1).png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -36,7 +36,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/Eco-Sav bag.jpg" alt="EcoSav Bags">
+                        <img src="../../images/Eco-Sav bag(1).png" alt="EcoSav Bags">
                     </div>
 
                     <div class="product-info-section">
@@ -113,19 +113,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/IWD.jpg" alt="iwd-ice-water-dispenser" loading="lazy" />
+                     <img class="product-image small" src="../../images/IWD.png" alt="iwd-ice-water-dispenser" loading="lazy" />
                     <h4>Ice Water Dispenser (IWD)</h4>
                     <p>Walk-in access to chilled glycol water</p>
                     <a href="iwd-ice-water-dispenser.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/nomad 25.JPG" alt="nomad-cans-25l" loading="lazy" />
+                     <img class="product-image small" src="../../images/Nomad 25.png" alt="nomad-cans-25l" loading="lazy" />
                     <h4>Nomad Cans</h4>
                     <p>Insulated cans with thermocores for milk</p>
                     <a href="nomad-cans-25l.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Digital dairy records and payments</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
