--- a/store-app/products-detailed/eco-sav-pasteurizer.html
+++ b/store-app/products-detailed/eco-sav-pasteurizer.html
@@ -22,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/PASTUERIZER.jpg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/PASTURERIZER.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -38,7 +38,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/PASTUERIZER.jpg" alt="EcoSav Pasteurisers">
+                        <img src="../../images/PASTURERIZER.png" alt="EcoSav Pasteurisers">
                     </div>
                 
 
@@ -115,19 +115,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/SOLAR BMC.jpg" alt="bmc-solar" loading="lazy" />
+                     <img class="product-image small" src="../../images/SOLAR BMC.png" alt="bmc-solar" loading="lazy" />
                     <h4>Bulk Milk Chiller</h4>
                     <p>Centralized bulk chilling with DMS logging</p>
                     <a href="bmc-solar.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Digital batch and process records</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/pre chillers PRO.jpg" alt="maziwaplus-prechiller-pro loading="lazy" />
+                     <img class="product-image small" src="../../images/pre chillers PRO.png" alt="maziwaplus-prechiller-pro" loading="lazy" />
                     <h4>maziwaplus-prechiller-pro</h4>
                     <p>bulk milk cooling for collection centers</p>
                     <a href="maziwaplus-prechiller-pro.html" class="cta-button secondary">Explore Options</a>
