--- a/store-app/products-detailed/iwd-ice-water-dispenser.html
+++ b/store-app/products-detailed/iwd-ice-water-dispenser.html
@@ -21,7 +21,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/IWD.jpg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/IWD.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -37,7 +37,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/IWD.jpg" alt="Ice Water Dispenser (IWD)">
+                        <img src="../../images/IWD.png" alt="Ice Water Dispenser (IWD)">
                     </div>
                     <div class="product-info-section">
                            <h2>Ice Water Dispenser (IWD)</h2>
@@ -115,19 +115,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                    <img class="product-image small" src="../../images/nomad 25.JPG" alt="nomad-cans-25l" loading="lazy" />
+                    <img class="product-image small" src="../../images/Nomad 25.png" alt="nomad-cans-25l" loading="lazy" />
                     <h4>Nomad Cans</h4>
                     <p>Insulated cans with thermocores for milk transport</p>
                     <a href="nomad-cans-25l.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/Eco-Sav bag.jpg" alt="eco-sav-bags" loading="lazy" />
+                     <img class="product-image small" src="../../images/Eco-Sav bag(1).png" alt="eco-sav-bags" loading="lazy" />
                     <h4>EcoSav Bags</h4>
                     <p>Insulated bags for fish and produce</p>
                     <a href="eco-sav-bags.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/NOMAD 10 LTRS.png" alt="nomad-cans-10l" loading="lazy" />
+                     <img class="product-image small" src="../../images/nomad 10.png" alt="nomad-cans-10l" loading="lazy" />
                     <h4>nomad can 10ltrs</h4>
                     <p>small scale,portability and efficiency</p>
                     <a href="nomad-cans-10l.html" class="cta-button secondary">View Details</a>
