--- a/store-app/products-detailed/maziwaplus-dms.html
+++ b/store-app/products-detailed/maziwaplus-dms.html
@@ -22,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/M+ DMS.png"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/M+DMS.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -38,7 +38,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/M+ DMS.png" alt="MaziwaPlus DMS">
+                        <img src="../../images/M+DMS.png" alt="MaziwaPlus DMS">
                     </div>
 
                   <div class="product-info-section">
@@ -132,19 +132,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/IWD.jpg" alt="iwd-ice-water-dispenser" loading="lazy" />
+                     <img class="product-image small" src="../../images/IWD.png" alt="iwd-ice-water-dispenser" loading="lazy" />
                     <h4>Ice Water Dispenser (IWD)</h4>
                     <p>Stationary chilled glycol for first-mile cooling</p>
                     <a href="iwd-ice-water-dispenser.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                    <img class="product-image small" src="../../images/pre chillers PRO.jpg" alt="maziwaplus-prechiller-pro" loading="lazy" />
+                     <img class="product-image small" src="../../images/pre chillers PRO.png" alt="maziwaplus-prechiller-pro" loading="lazy" />
                     <h4>MaziwaPlus Pro</h4>
                     <p>Solar-powered active cooling trike</p>
                     <a href="maziwaplus-prechiller-pro.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/SOLAR BMC.jpg" alt="bmc-solar" loading="lazy" />
+                     <img class="product-image small" src="../../images/SOLAR BMC.png" alt="bmc-solar" loading="lazy" />
                     <h4>Bulk Milk Chiller</h4>
                     <p>Centralized bulk chilling with DMS logging</p>
                     <a href="bmc-solar.html" class="cta-button secondary">View Details</a>
