--- a/store-app/products-detailed/maziwaplus-prechiller-300.html
+++ b/store-app/products-detailed/maziwaplus-prechiller-300.html
@@ -23,7 +23,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/M+ PRE CHILLER.JPG"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/M+ PRE CHILLER.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -39,7 +39,7 @@
             <div class="product-main-grid">
                 <!-- Product Image/Icon -->
                 <div class="product-image-section">
-                    <div class="product-image-large"><img src="../../images/M+ PRE CHILLER.JPG" alt="MaziwaPlus Prechillers 300-1000L">
+                    <div class="product-image-large"><img src="../../images/M+ PRE CHILLER.png" alt="MaziwaPlus Prechillers 300-1000L">
                 </a></div>
                 <!-- Product Info -->
                 <div class="product-info-section">
@@ -123,19 +123,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/pre chillers PRO.jpg" alt="maziwaplus-prechiller-pro" loading="lazy" />
+                     <img class="product-image small" src="../../images/pre chillers PRO.png" alt="maziwaplus-prechiller-pro" loading="lazy" />
                     <h4>MaziwaPlus Prechillers Pro</h4>
                     <p>Advanced version with smart monitoring</p>
                     <a href="maziwaplus-prechiller-pro.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/HYBRID BMC.jpeg" alt="bmc-hybrid" loading="lazy" />
+                     <img class="product-image small" src="../../images/HYBRID BMC.png" alt="bmc-hybrid" loading="lazy" />
                     <h4>BMC Hybrid Milk Cooler</h4>
                     <p>Flexible hybrid cooling system</p>
                     <a href="bmc-hybrid.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                    <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                    <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Management software for dairy operations</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
