--- a/store-app/products-detailed/nomad-cans-25l.html
+++ b/store-app/products-detailed/nomad-cans-25l.html
@@ -21,7 +21,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/nomad 25.JPG"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/Nomad 25.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -36,7 +36,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/nomad 25.JPG" alt="Nomad Cans 25L"></a>
+                        <img src="../../images/Nomad 25.png" alt="Nomad Cans 25L"></a>
                     </div>
 
                    <div class="product-info-section">
@@ -116,19 +116,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                    <img class="product-image small" src="../../images/NOMAD 10 LTRS.png" alt="nomad-cans-10l" loading="lazy" />
+                    <img class="product-image small" src="../../images/nomad 10.png" alt="nomad-cans-10l" loading="lazy" />
                     <h4>Nomad Cans 10L</h4>
                     <p>Smaller portable option</p>
                     <a href="nomad-cans-10l.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                  <img class="product-image small" src="../../images/NOMAD CANS.jpeg" alt="nomad-cans-50l" loading="lazy" />
+                  <img class="product-image small" src="../../images/NOMAD CANS.png" alt="nomad-cans-50l" loading="lazy" />
                     <h4>Nomad Cans 50L</h4>
                     <p>Larger capacity system</p>
                     <a href="nomad-cans-50l.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Cooperative management software</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
