--- a/store-app/index.html
+++ b/store-app/index.html
@@ -74,7 +74,7 @@
                 <div class="products-grid">
                     <!-- Product: Nomad Cans 10L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/NOMAD%2010%20LTRS.png" alt="Nomad Cans 10L">
+                        <img class="product-image" loading="lazy" src="../images/nomad 10.png" alt="Nomad Cans 10L">
                         <h4>Nomad Cans - 10L</h4>
                         <p class="product-spec">Portable Milk  container</p>
                         <p class="product-description">Durable portable container for mobile operations. Lightweight and efficient for small-scale farmers.</p>
@@ -87,7 +87,7 @@
 
                     <!-- Product: Nomad Cans 25L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/nomad%2025.JPG" alt="Nomad Cans 25L">
+                        <img class="product-image" loading="lazy" src="../images/Nomad%2025.png" alt="Nomad Cans 25L">
                         <h4>Nomad Cans - 25L</h4>
                         <p class="product-spec">Mid-capacity container</p>
                         <p class="product-description">Perfect balance between capacity and portability for medium-scale farm operations.</p>
@@ -100,7 +100,7 @@
 
                     <!-- Product: Nomad Cans 50L -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/NOMAD%20CANS.jpeg" alt="Nomad Cans 50L">
+                        <img class="product-image" loading="lazy" src="../images/NOMAD CANS.png" alt="Nomad Cans 50L">
                         <h4>Nomad Cans - 50L</h4>
                         <p class="product-spec">Heavy-duty container</p>
                         <p class="product-description">High-capacity portable container for bulk operations. Industrial-grade construction for durability.</p>
@@ -113,7 +113,7 @@
 
                     <!-- Product: IWD Ice Water Dispenser -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/IWD.jpg" alt="IWD Ice Water Dispenser">
+                        <img class="product-image" loading="lazy" src="../images/IWD.png" alt="IWD Ice Water Dispenser">
                         <h4>IWD Ice Water Dispenser</h4>
                         <p class="product-spec">Solar-powered cold water</p>
                         <p class="product-description">Solar-powered chilled water for farms and communities. Improves produce preservation and ensured low food spoilage .</p>
@@ -126,7 +126,7 @@
 
                     <!-- Product: Eco-Sav Thermal Bags -->
                     <div class="product-card" data-category="SOLAR-THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/Eco-Sav%20bag.jpg" alt="Eco-Sav Thermal Bags">
+                        <img class="product-image" loading="lazy" src="../images/Eco-Sav bag(1).png" alt="Eco-Sav Thermal Bags">
                         <h4>Eco-Sav Thermal Bags</h4>
                         <p class="product-spec">Insulated transport bags</p>
                         <p class="product-description">Durable thermal bags for temperature-sensitive product transport. Reusable and environmentally friendly.</p>
@@ -140,7 +140,7 @@
 
                             <!-- Product: MaziwaPlus Dairy Management System -->
                 <div class="product-card" data-category="SOLAR_THRIVE">
-                        <img class="product-image" loading="lazy" src="../images/M+%20DMS.png" alt="MaziwaPlus Dairy Management System">
+                        <img class="product-image" loading="lazy" src="../images/M+DMS.png" alt="MaziwaPlus Dairy Management System">
                         <h4>MaziwaPlus Dairy Management System</h4>
                         <p class="product-spec">Cloud-based ERP platform</p>
                         <p class="product-description">Comprehensive dairy  management platform with real-time tracking, financial management, and market linkages.</p>
@@ -160,7 +160,7 @@
                 <div class="products-grid">
                     <!-- Product: MaziwaPlus Prechillers 300-1000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../images/M+%20PRE%20CHILLER.JPG" alt="MaziwaPlus Prechillers 300-1000L">
+                        <img class="product-image" loading="lazy" src="../images/M+%20PRE%20CHILLER.png" alt="MaziwaPlus Prechillers 300-1000L">
                         <h4>MaziwaPlus Prechillers 300-1000L</h4>
                         <p class="product-spec">Entry-level hybrid milk chiller</p>
                         <p class="product-description">Efficiently cools and stores milk with hybrid power options. Customizable from 300-1000L capacity.</p>
@@ -173,7 +173,7 @@
 
                     <!-- Product: MaziwaPlus Prechillers Pro 200-2000L -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../images/pre%20chillers%20PRO.jpg" alt="MaziwaPlus Prechillers Pro 200-2000L">
+                        <img class="product-image" loading="lazy" src="../images/pre%20chillers%20PRO.png" alt="MaziwaPlus Prechillers Pro 200-2000L">
                         <h4>MaziwaPlus Prechillers Pro 200-2000L</h4>
                         <p class="product-spec">Advanced hybrid milk chiller</p>
                         <p class="product-description">Premium features for large farms  and milk collection centers. Enhanced efficiency with smart monitoring and analytics.</p>
@@ -186,7 +186,7 @@
 
                     <!-- Product: BMC Hybrid Milk Cooler -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../images/HYBRID%20BMC.jpeg" alt="BMC Hybrid Milk Cooler">
+                        <img class="product-image" loading="lazy" src="../images/HYBRID%20BMC.png" alt="BMC Hybrid Milk Cooler">
                         <h4>BMC Hybrid Milk Cooler</h4>
                         <p class="product-spec">Flexible solar + grid power</p>
                         <p class="product-description">Versatile hybrid system combining solar and grid power. Perfect for inconsistent solar areas.</p>
@@ -199,7 +199,7 @@
 
                     <!-- Product: BMC Solar Milk Cooler -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../images/SOLAR%20BMC.jpg" alt="BMC Solar Milk Cooler">
+                        <img class="product-image" loading="lazy" src="../images/SOLAR%20BMC.png" alt="BMC Solar Milk Cooler">
                         <h4>BMC Solar Milk Cooler</h4>
                         <p class="product-spec">100% solar-powered</p>
                         <p class="product-description">Pure solar cooling with battery storage. Ideal for off-grid locations with maximum sustainability.</p>
@@ -212,7 +212,7 @@
 
                     <!-- Product: Eco-Sav Pasteurizer -->
                     <div class="product-card" data-category="solar-cooling">
-                        <img class="product-image" loading="lazy" src="../images/PASTUERIZER.jpg" alt="Eco-Sav Pasteurizer 100-500L">
+                        <img class="product-image" loading="lazy" src="../images/PASTURERIZER.png" alt="Eco-Sav Pasteurizer 100-500L">
                         <h4>Eco-Sav Pasteurizer 100-500L</h4>
                         <p class="product-spec">Solar-powered pasteurization</p>
                         <p class="product-description">Professional milk pasteurization system powered by solar. Extends shelf life and meets safety standards.</p>
