--- a/store-app/products-detailed/maziwaplus-prechiller-pro.html
+++ b/store-app/products-detailed/maziwaplus-prechiller-pro.html
@@ -22,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/pre chillers PRO.jpg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/pre chillers PRO.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -38,7 +38,7 @@
             <div class="product-main-grid">
                 <!-- Product Image/Icon -->
                 <div class="product-image-section">
-                    <div class="product-image-large"><img src="../../images/pre chillers PRO.jpg" alt="MaziwaPlus Prechillers Pro">
+                    <div class="product-image-large"><img src="../../images/pre chillers PRO.png" alt="MaziwaPlus Prechillers Pro">
                 </a></div>
                 <!-- Product Info -->
                 <div class="product-info-section">
@@ -125,19 +125,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                   <img class="product-image small" src="../../images/M+ PRE CHILLER.JPG" alt="maziwaplus-prechiller-300" loading="lazy" />
+                   <img class="product-image small" src="../../images/M+ PRE CHILLER.png" alt="maziwaplus-prechiller-300" loading="lazy" />
                     <h4>MaziwaPlus Prechillers 300-1000L</h4>
                     <p>Entry-level hybrid cooling solution</p>
                     <a href="maziwaplus-prechiller-300.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                   <img class="product-image small" src="../../images/SOLAR BMC.jpg" alt="bmc-solar" loading="lazy" />
+                   <img class="product-image small" src="../../images/SOLAR BMC.png" alt="bmc-solar" loading="lazy" />
                     <h4>BMC Solar Milk Cooler</h4>
                     <p>Pure solar cooling technology</p>
                     <a href="bmc-solar.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                   <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                   <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Complete dairy management software</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
