--- a/store-app/products-detailed/nomad-cans-10l.html
+++ b/store-app/products-detailed/nomad-cans-10l.html
@@ -22,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/NOMAD 10 LTRS.png"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/nomad 10.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -38,7 +38,7 @@
             <div class="product-main-grid">
                 <div class="product-image-section">
                     <div class="product-image-large">
-                        <img src="../../images/NOMAD 10 LTRS.png" alt="Nomad Can 10L">
+                        <img src="../../images/nomad 10.png" alt="Nomad Can 10L">
                     </div>
 
                  <div class="product-info-section">
@@ -122,19 +122,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                    <img class="product-image small" src="../../images/IWD.jpg" alt="iwd-ice-water-dispenser" loading="lazy" />
+                    <img class="product-image small" src="../../images/IWD.png" alt="iwd-ice-water-dispenser" loading="lazy" />
                     <h4>Ice Water Dispenser (IWD)</h4>
                     <p>Chilled glycol water for Thermocores</p>
                     <a href="iwd-ice-water-dispenser.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/Eco-Sav bag.jpg" alt="eco-sav-bags" loading="lazy" />
+                     <img class="product-image small" src="../../images/Eco-Sav bag(1).png" alt="eco-sav-bags" loading="lazy" />
                     <h4>EcoSav Bags</h4>
                     <p>Insulated bags for fisheries and produce</p>
                     <a href="eco-sav-bags.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Digital dairy records and payments</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
