--- a/store-app/products-detailed/nomad-cans-50l.html
+++ b/store-app/products-detailed/nomad-cans-50l.html
@@ -22,7 +22,7 @@
 <section class="hero-subpage">
     <div class="hero-bg">
         <!-- Use high-quality, lightweight imagery or subtle video -->
-        <img src="../../images/NOMAD CANS.jpeg"  alt="MaziwaPlus Chiller" class="bg-media">
+        <img src="../../images/NOMAD CANS.png"  alt="MaziwaPlus Chiller" class="bg-media">
         <div class="overlay"></div>
     </div>
     
@@ -37,7 +37,7 @@
         <div class="section-container">
             <div class="product-main-grid">
                 <div class="product-image-section">
-                    <div class="product-image-large"><img src="../../images/NOMAD CANS.jpeg" alt="Nomad Cans 50L">
+                    <div class="product-image-large"><img src="../../images/NOMAD CANS.png" alt="Nomad Cans 50L">
                     </a></div>
 
                  <div class="product-info-section">
@@ -131,19 +131,19 @@
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/nomad 25.JPG" alt="nomad-cans-25l" loading="lazy" />
+                     <img class="product-image small" src="../../images/Nomad 25.png" alt="nomad-cans-25l" loading="lazy" />
                     <h4>Nomad Cans 25L</h4>
                     <p>Medium capacity option</p>
                     <a href="nomad-cans-25l.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/pre chillers PRO.jpg" alt="maziwaplus-prechiller-pro" loading="lazy" />
+                     <img class="product-image small" src="../../images/pre chillers PRO.png" alt="maziwaplus-prechiller-pro" loading="lazy" />
                     <h4>MaziwaPlus Prechillers Pro</h4>
                     <p>Stationary cooling system</p>
                     <a href="maziwaplus-prechiller-pro.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms loading="lazy" />
+                     <img class="product-image small" src="../../images/M+DMS.png" alt="maziwaplus-dms loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Fleet management software</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
