Update carousel items with arrows and punctuation

--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         </div>
     </div>
 
-    <!-- Bottom Full-Width Carousel Bar -->
+   <!-- Bottom Full-Width Carousel Bar -->
     <div class="hero-workflow-carousel">
         <div class="hero-workflow-title">OUR WORKFLOW:</div>
         <div class="carousel-mask">
         <div class="carousel-track">
-            <div class="carousel-item">Product Design</div>
-            <div class="carousel-item">Manufacturing & QC</div>
-            <div class="carousel-item">Distribution</div>
-            <div class="carousel-item">Training & Adoption</div>
-            <div class="carousel-item">Aftersales & Monitoring</div>
+            <div class="carousel-item">Product Design &rarr;</div>
+            <div class="carousel-item">Manufacturing & QC &rarr;</div>
+            <div class="carousel-item">Distribution &rarr;</div>
+            <div class="carousel-item">Training & Adoption &rarr;</div>
+            <div class="carousel-item">Aftersales & Monitoring.</div>
             <!-- Duplicates for seamless loop -->
-            <div class="carousel-item">Product Design</div>
-            <div class="carousel-item">Manufacturing & QC</div>
-            <div class="carousel-item">Distribution</div>
-            <div class="carousel-item">Training & Adoption</div>
-            <div class="carousel-item">Aftersales & Monitoring</div>
+            <div class="carousel-item">Product Design &rarr;</div>
+            <div class="carousel-item">Manufacturing & QC &rarr;</div>
+            <div class="carousel-item">Distribution &rarr;</div>
+            <div class="carousel-item">Training & Adoption &rarr;</div>
+            <div class="carousel-item">Aftersales & Monitoring.</div>
         </div>
         </div>
     </div>
